Se agrega boton de regresar en todos los modulos

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -19,6 +19,7 @@
     "search": "Search",
     "assignPerson": "Assign Person",
     "print": "Print",
+    "return": "Return",
     "submit": "Submit",
     "dolownd": "Dolownd File",
     "upload": "Upload File",
