--- a/src/i18n/messages/es.json
+++ b/src/i18n/messages/es.json
@@ -14,6 +14,7 @@
     "confirm_password": "Confirma contraseña",
     "sign_up_success": "¡Registro exitoso!",
     "sign_in_success": "Ingreso exitoso",
+    "return": "Regresar",
     "setup": "Configuración",
     "empty_table": "Tabla vacía",
     "search": "Buscar",
