--- a/src/i18n/messages/es.json
+++ b/src/i18n/messages/es.json
@@ -871,11 +871,11 @@
     },
     "audit": {
       "index": "Indice",
-      "description": "Descripción",
-      "title": "Titulo",
+      "description": "Descripción del Riesgo",
+      "title": "Titulo del Riesgo",
       "addRisk": "Agregar Riesgo",
       "uploadFile": "Subir Archivo",
-      "riskControlRegistration": "Resgistro de Control de Riegos",
+      "riskControlRegistration": "Registro de Control de Riesgo",
       "ref": "Ref",
       "auditor": "Auditor",
       "quadrant": "Cuadrante",
@@ -938,7 +938,7 @@
       "causativeSourceOfRisk": "Fuente causante del riesgo",
       "impactOnTheFinancialStatementsAndAccountsConcerned": "Consecuencia en los estados financieros y cuentas afectadas",
       "associatedAssertions": "Aseveraciones Asociadas",
-      "assertionsAboutTransactionClassesAndEvents": "Aseveraciones sobre las Clases de Transacciones y Eventos",
+      "assertionsAboutTransactionClassesAndEvents": "Aseveraciones sobre las clases de transacciones y eventos y revelaciones relacionadas en el período auditado afectadas por el riesgo",
       "middle": "Mediano",
       "low": "Bajo",
       "high": "Alto",
@@ -952,6 +952,7 @@
       "iiiAccuracy(A)": "III. Precisión (P)",
       "iVCourt(CO)": "IV. Corte (CO)",
       "vClassification(CL)": "V. Clasificación (CL)",
+      "viPresentation(PR)": "VI. Presentación (PR)",
       "statementsOnBalancingItems": "Aseveraciones Sobre los Saldos Contables",
       "iExistence(E)": "I. Existencia (E)",
       "iiRightsAndObligations(RO)": "II. Derechos y Obligaciones (DO)",
@@ -980,6 +981,12 @@
       "recommendationForProcessImprovementprocess": "Recomendación para mejoramiento del proceso",
       "residualAuditRisk": "Riesgo de auditoria residual",
       "effectOnTheAuditOpinion": "Efecto en el Dictamen de Auditoría",
+      "ocurrence": "Han ocurrido transacciones y eventos que han sido registrados o revelados, y dichas transacciones y eventos pertenecen a la entidad.",
+      "integrity": "Se han registrado todas las transacciones y eventos que deberían haberse registrado, y se han incluido todas las revelaciones relacionadas que deberían haberse incluido en los estados financieros.",
+      "precision": "Los montos y otros datos relacionados con transacciones y eventos registrados se han registrado adecuadamente y las revelaciones relacionadas se han medido y descrito adecuadamente.",
+      "court": "Las transacciones y eventos se han registrado en el período contable correcto.",
+      "classification": "Las transacciones y eventos se han registrado en las cuentas adecuadas.",
+      "presentation": "Transactions and events are appropriately aggregated or disaggregated and clearly described, and related disclosures are relevant and understandable in the context of the requirements of the applicable financial reporting framework.",
 
       "created": {
         "success": "¡El Riesgo fue creado exitosamente!",
