--- a/src/i18n/messages/es.json
+++ b/src/i18n/messages/es.json
@@ -911,6 +911,9 @@
     "risk": {
       "index": "Indice",
       "description": "Descripción",
+      "typeOfRisk": "Tipo de Riesgo",
+      "atTheLevelOfFinancialStatements": "A nivel de estados financieros",
+      "atTheLevelOfAssertions": "A nivel de aseveraciones",
       "title": "Titulo",
       "ref": "Ref",
       "quadrant": "Cuadrante",
@@ -921,10 +924,10 @@
       "othersRisk": "Otros Riesgos",
       "riskFrom": "Riesgo proveniente de",
       "recurringTransactions": "Transacciones Recurrentes",
-      "nonRecurringTransactions": "Transacciones no Rcurrentes",
+      "nonRecurringTransactions": "Transacciones no Recurrentes",
       "judgmentsAndEstimates": "Juicios y Estimaciones",
       "accountingClosingEntries": "Asientos de Cierre Contable",
-      "riskArea": "Area de Riesgo",
+      "affectedProcess": "Proceso Afectado",
       "critical": "Critica",
       "strategic": "Estrategico",
       "support": "Soporte",
@@ -953,11 +956,11 @@
       "iVCourt(CO)": "IV. Corte (CO)",
       "vClassification(CL)": "V. Clasificación (CL)",
       "viPresentation(PR)": "VI. Presentación (PR)",
-      "statementsOnBalancingItems": "Aseveraciones Sobre los Saldos Contables",
+      "statementsOnBalancingItems": "Aseveraciones sobre saldos de las cuentas y revelaciones relacionadas al final del período afectadas por el riesgo.",
       "iExistence(E)": "I. Existencia (E)",
       "iiRightsAndObligations(RO)": "II. Derechos y Obligaciones (DO)",
       "iiiIntegrity(I)": "III. Integridad (I)",
-      "ivEvaluationAndAssignment(EA)": "IV. Evaluación y Asignación (VA)",
+      "ivAccuracyValuationAndAssignment(PVA)": "IV. Precisión, valoración y asignación (PVA)",
       "assertionsAboutPresentationAndDisclosure": "Aseveraciones sobre la presentación y revelación",
       "iTheOccurrenceAndRightsAndOblications(ORO)": "I. La Ocurrencia y los Derechos y Oblicgaciones (ODO)",
       "iiiClassificationAndComprehension(CC)": "III. Clasificación y Comprensión (CC)",
@@ -986,7 +989,13 @@
       "precision": "Los montos y otros datos relacionados con transacciones y eventos registrados se han registrado adecuadamente y las revelaciones relacionadas se han medido y descrito adecuadamente.",
       "court": "Las transacciones y eventos se han registrado en el período contable correcto.",
       "classification": "Las transacciones y eventos se han registrado en las cuentas adecuadas.",
-      "presentation": "Transactions and events are appropriately aggregated or disaggregated and clearly described, and related disclosures are relevant and understandable in the context of the requirements of the applicable financial reporting framework.",
+      "presentation": "Las transacciones y eventos se agregan o desagregan adecuadamente y se describen claramente, y las revelaciones relacionadas son relevantes y comprensibles en el contexto de los requisitos del marco de información financiera aplicable.",
+      "existence": "Los activos, pasivos e intereses patrimoniales existen.",
+      "rightsAndObligations": "La entidad posee o controla los derechos sobre los activos y los pasivos son obligaciones de la entidad.",
+      "integrity1": "Se han registrado todos los activos, pasivos e intereses de capital que deberían haberse registrado, y se han incluido todas las revelaciones relacionadas que deberían haberse incluido en los estados financieros.",
+      "accuracyValuationAndAllocation": "Los activos, pasivos e intereses de capital se han incluido en los estados financieros en cantidades apropiadas y cualquier ajuste de valoración o asignación resultante se ha registrado adecuadamente, y las revelaciones relacionadas se han medido y descrito adecuadamente.",
+      "clasification1": "Los activos, pasivos y participaciones en el capital se han registrado en las cuentas adecuadas.",
+      "presentation1": "Los activos, pasivos y participaciones en el patrimonio se agregan o desagregan adecuadamente y se describen claramente, y las revelaciones relacionadas son relevantes y comprensibles en el contexto de los requisitos del marco de información financiera aplicable.",
 
       "created": {
         "success": "¡El Riesgo fue creado exitosamente!",
