se realizan ajustes en el formulaio de riesgos

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -935,7 +935,7 @@
     "strategic": "Strategic",
     "support": "Suppor",
     "natureOfTheRisk": "Nature of the Risk",
-    "intentional": "Intentional",
+    "intentional": "Intentional (Fraud)",
     "unintentional": "Unintentional",
     "businessViability": "Business Viability",
     "customerExpectations": "Customer Expectations",
@@ -945,7 +945,7 @@
     "high": "High",
     "inherent": "Inherent",
     "control": "Control",
-    "analytic": "Analytic",
+    "detection": "Detection",
     "riskFactor": "Risk Factor",
     "risksAssessment": "Risks Assessment",
     "processesWhereRiskIsInvolved": "Processes Where Risk is Involved",
