--- a/src/i18n/messages/es.json
+++ b/src/i18n/messages/es.json
@@ -932,7 +932,7 @@
       "strategic": "Estrategico",
       "support": "Soporte",
       "natureOfTheRisk": "Naturaleza del riesgo",
-      "intentional": "Intencional",
+      "intentional": "Intencional (Fraude)",
       "unintentional": "No Intencional",
       "businessViability": "Viabilidad del negocio",
       "customerExpectations": "Expectativas del Cliente",
@@ -942,14 +942,14 @@
       "impactOnTheFinancialStatementsAndAccountsConcerned": "Consecuencia en los estados financieros y cuentas afectadas",
       "associatedAssertions": "Aseveraciones Asociadas",
       "assertionsAboutTransactionClassesAndEvents": "Aseveraciones sobre las clases de transacciones y eventos y revelaciones relacionadas en el período auditado afectadas por el riesgo",
-      "middle": "Mediano",
+      "middle": "Medio",
       "low": "Bajo",
       "high": "Alto",
       "risksAssessment": "Evaluación de Riesgos",
       "inherent": "Inherente",
       "control": "Control",
-      "analytic": "Analitico",
-      "riskFactor": "Factor de risgo",
+      "detection": "Detección",
+      "riskFactor": "Factor de riesgo",
       "iOccurrence(O)": "I. Ocurrencia (O)",
       "iiIntegrity(I)": "II. Integridad (I)",
       "iiiAccuracy(A)": "III. Precisión (P)",
