se modifia formulario de riesgos para agregar tabla

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -917,6 +917,11 @@
     "typeOfRisk": "Type of Risk",
     "atTheLevelOfFinancialStatements": "At the Level of Financial Statements",
     "atTheLevelOfAssertions": "At the level of assertions",
+    "accountOfAffectedFinancialStatementsAndStatements": "Account of affected financial statements and statements",
+    "accountName": "Account Name",
+    "preliminary": "Preliminary",
+    "affectedClaims": "Affected Claims",
+    "final": "Final",
     "title": "Title",
     "ref": "Ref",
     "riskFrom": "Risk from",
