--- a/src/i18n/messages/es.json
+++ b/src/i18n/messages/es.json
@@ -914,8 +914,13 @@
       "typeOfRisk": "Tipo de Riesgo",
       "atTheLevelOfFinancialStatements": "A nivel de estados financieros",
       "atTheLevelOfAssertions": "A nivel de aseveraciones",
+      "accountOfAffectedFinancialStatementsAndStatements": "Cuenta de los estados financieros y aseveraciones afectadas",
       "title": "Titulo",
       "ref": "Ref",
+      "accountName": "Nombre de la cuenta",
+      "preliminary": "Preliminar",
+      "final": "Final",
+      "affectedClaims": "Aseveraciones afectadas",
       "quadrant": "Cuadrante",
       "quadrantI": "Cuadrante 1",
       "quadrantII": "Cuadrante 2",
@@ -969,7 +974,7 @@
       "effectiveDesign": "Diseño Efectivo",
       "effectiveOperability": "Operatividad Efectiva",
       "monitoring": "Monitoreo",
-      "untried": "No Aprobado",
+      "untried": "No probado",
       "general": "General",
       "specific": "Específico",
       "informationIntegrity": "Integridad de la Información",
