Se agrega metodo para comprimir y descargar carpeta de proyectos

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -23,6 +23,7 @@
     "return": "Return",
     "submit": "Submit",
     "dolownd": "Dolownd File",
+    "downloadZipFile": "Download zip file",
     "upload": "Upload File",
     "addRisk": "Add Risk",
     "reset": "Reset",
