--- a/src/i18n/messages/es.json
+++ b/src/i18n/messages/es.json
@@ -25,6 +25,7 @@
     "edit": "Editar",
     "assignPerson": "Asignar Persona",
     "dolownd": "Descargar Archivo",
+    "downloadZipFile": "Descargar archivo zip",
     "upload": "Subir Archivo",
     "addRisk": "Agregar Riesgo",
     "print": "Imprimir",
