Se agreg apdf y delete en riesgo

--- a/src/i18n/messages/es.json
+++ b/src/i18n/messages/es.json
@@ -880,7 +880,7 @@
       "ref": "Ref",
       "auditor": "Auditor",
       "quadrant": "Cuadrante",
-      "date": "Date",
+      "date": "Fecha",
       "RiskMatrix": "Matriz de Riesgo",
       "allRisks": "Todos los Riesgos",
       "quadrantI": "Cuadrante I",
