Se modifica formulario de riesgo para agregar formato a los numeros y agregar ref

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -916,6 +916,7 @@
     "balance": "Balance",
     "index": "Index",
     "description": "Description of Risk",
+    "descriptionOfAuditTests": "Description of Audit Tests",
     "typeOfRisk": "Type of Risk",
     "reasonsForNotTestingControls": "Reasons for Not Testing Controls",
     "atTheLevelOfFinancialStatements": "At the Level of Financial Statements",
@@ -981,6 +982,7 @@
     "effectiveOperability": "Effective Operability",
     "monitoring": "Monitoring",
     "untried": "Untried",
+    "tried": "Tried",
     "general": "General",
     "specific": "Specífic",
     "informationIntegrity": "Information Integrity",
