--- a/src/i18n/messages/es.json
+++ b/src/i18n/messages/es.json
@@ -913,6 +913,7 @@
       "balance": "Saldo",
       "index": "Indice",
       "description": "Descripción del Riesgo",
+      "descriptionOfAuditTests": "Descripción de las Pruebas de Auditoría",
       "typeOfRisk": "Tipo de Riesgo",
       "reasonsForNotTestingControls": "Razones de no probar los controles",
       "atTheLevelOfFinancialStatements": "A nivel de estados financieros",
@@ -978,6 +979,7 @@
       "effectiveOperability": "Operatividad Efectiva",
       "monitoring": "Monitoreo",
       "untried": "No probado",
+      "tried": "Probado",
       "general": "General",
       "specific": "Específico",
       "informationIntegrity": "Integridad de la Información",
