Se realizan modificaciones varias

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -2,6 +2,7 @@
   "message": {
     "sign_in_to_your_account": "Sign in to your account!",
     "sign_up": "Sign up!",
+    "information": "Information",
     "cancel": "Cancelar",
     "your_email": "Your email",
     "password": "Password",
