Se realizan ajustes varios

--- a/src/i18n/messages/es.json
+++ b/src/i18n/messages/es.json
@@ -33,6 +33,7 @@
     "restore": "Restaurar",
     "redirect": "Redireccionar",
     "delete": "Eliminar",
+    "pleaseConfirm": "Please confirm", 
     "yes": "Si",
     "no": "No",
     "next": "Siguiente",
