--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -6,6 +6,7 @@
     "cancel": "Cancelar",
     "your_email": "Your email",
     "password": "Password",
+    "pleaseConfirm": "Por favor, confirme", 
     "remember_me": "Remember me",
     "forgot_password": "Forgot password?",
     "dont_have_an_account_yet": "Don’t have an account yet?",
