Se relizan ajustes para paginacion y ocultar en algunos modulos el input de codigo

--- a/src/i18n/messages/es.json
+++ b/src/i18n/messages/es.json
@@ -1,6 +1,6 @@
 {
   "message": {
-    "cancel": "Cancel",
+    "cancel": "Cancelar",
     "information": "Información",
     "sign_in_to_your_account": "¡Ingresa a tu cuenta!",
     "sign_up": "¡Regístrate!",
