Se agrega metodo para generar codigo autoincrementable en los modulos que tienen la propiedad codigo

--- a/src/i18n/messages/es.json
+++ b/src/i18n/messages/es.json
@@ -33,7 +33,7 @@
     "restore": "Restaurar",
     "redirect": "Redireccionar",
     "delete": "Eliminar",
-    "pleaseConfirm": "Please confirm", 
+    "pleaseConfirm": "Por favor confirmar", 
     "yes": "Si",
     "no": "No",
     "next": "Siguiente",
