Se modifica controlador de riesgos

--- a/src/i18n/messages/es.json
+++ b/src/i18n/messages/es.json
@@ -825,7 +825,7 @@
       "parentArea": "Area padre",
       "route": "Ruta",
       "visible": "Visible",
-      "rcr": "Risks to Identify",
+      "rcr": "Riesgos a identificar",
       "editable": "Editable",
       "membership": "Membresia",
       "selectedNode": "Debe seleccionar un item",
