Se modifica formulario de reisgo

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -4,6 +4,7 @@
     "sign_up": "Sign up!",
     "information": "Information",
     "cancel": "Cancelar",
+    "select": "Select",
     "your_email": "Your email",
     "password": "Password",
     "pleaseConfirm": "Por favor, confirme", 
