--- a/src/i18n/messages/es.json
+++ b/src/i18n/messages/es.json
@@ -1,6 +1,7 @@
 {
   "message": {
     "cancel": "Cancelar",
+    "select": "Seleccione",
     "information": "Información",
     "sign_in_to_your_account": "¡Ingresa a tu cuenta!",
     "sign_up": "¡Regístrate!",
