Se modifica pdf de riesgo

--- a/src/i18n/messages/es.json
+++ b/src/i18n/messages/es.json
@@ -955,7 +955,7 @@
       "judgmentsAndEstimates": "Juicios y Estimaciones",
       "accountingClosingEntries": "Asientos de Cierre Contable",
       "affectedProcess": "Proceso Afectado",
-      "critical": "Critica",
+      "critical": "Critico",
       "strategic": "Estrategico",
       "support": "Soporte",
       "natureOfTheRisk": "Naturaleza del riesgo",
