--- a/src/i18n/messages/es.json
+++ b/src/i18n/messages/es.json
@@ -30,6 +30,8 @@
     "dolownd": "Descargar Archivo",
     "downloadZipFile": "Descargar archivo zip",
     "upload": "Subir Archivo",
+    "itHasRisk": "Posee Riesgo",
+    "ownsFiles": "Posee Archivos",
     "addRisk": "Agregar Riesgo",
     "print": "Imprimir",
     "restore": "Restaurar",
